[package]
name = "limg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
actix-files = "0.6"
actix-multipart = "0.6"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
bytemuck = "1.13"
image = "0.24"
